--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -9,3 +9,8 @@ deltavault:
     accessKey: test
     secretKey: test
     pathStyle: true
+  dynamo:
+    endpoint: http://localhost:4566
+    region: us-east-1
+    accessKey: test
+    secretKey: test
