--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,18 @@
+name: delta-vault
 services:
   localstack:
-    image: localstack/localstack:s3-latest
+    image: localstack/localstack:latest
     ports:
       - "127.0.0.1:4566:4566"
     environment:
       - DEBUG=${DEBUG:-0}
       - PERSISTENCE=1
-      - SERVICES=s3
+      - SERVICES=s3,dynamodb
       - AWS_DEFAULT_REGION=us-east-1
       - AWS_ACCESS_KEY_ID=test
       - AWS_SECRET_ACCESS_KEY=test
       - AWS_EC2_METADATA_DISABLED=true
     volumes:
-      - localstack-s3-volume:/var/lib/localstack
+      - ./localstack/data:/var/lib/localstack
       - ./localstack/boot:/etc/localstack/init/boot.d
       - ./localstack/ready:/etc/localstack/init/ready.d
-
-volumes:
-  localstack-s3-volume:
